Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5833

sanity-lfsck test_6b: namespace lfsck completed unexpectedly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.7.0
    • Lustre 2.7.0
    • None
    • 3
    • 16356

      This issue was created by maloo for nasf <fan.yong@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/29838f2c-60fb-11e4-a66b-5254006e85c2.

      The sub-test test_6b failed with the following error:

      (6) Expect 'scanning-phase1', but got 'completed'
      

      Please provide additional information about the failure here.

      Info required for matching: sanity-lfsck 6b

            yong.fan nasf (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: